; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/bfa/extr_bfa_fcbuild.c_fc_logo_acc_build.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/bfa/extr_bfa_fcbuild.c_fc_logo_acc_build.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fchs_s = type { i32 }
%struct.fc_els_cmd_s = type { i32 }

@FC_ELS_ACC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fc_logo_acc_build(%struct.fchs_s* %0, i8* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.fchs_s*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.fc_els_cmd_s*, align 8
  store %struct.fchs_s* %0, %struct.fchs_s** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = bitcast i8* %12 to %struct.fc_els_cmd_s*
  store %struct.fc_els_cmd_s* %13, %struct.fc_els_cmd_s** %11, align 8
  %14 = load %struct.fchs_s*, %struct.fchs_s** %6, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %10, align 4
  %18 = call i32 @fc_els_rsp_build(%struct.fchs_s* %14, i32 %15, i32 %16, i32 %17)
  %19 = load %struct.fc_els_cmd_s*, %struct.fc_els_cmd_s** %11, align 8
  %20 = call i32 @memset(%struct.fc_els_cmd_s* %19, i32 0, i32 4)
  %21 = load i32, i32* @FC_ELS_ACC, align 4
  %22 = load %struct.fc_els_cmd_s*, %struct.fc_els_cmd_s** %11, align 8
  %23 = getelementptr inbounds %struct.fc_els_cmd_s, %struct.fc_els_cmd_s* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  ret i32 4
}

declare dso_local i32 @fc_els_rsp_build(%struct.fchs_s*, i32, i32, i32) #1

declare dso_local i32 @memset(%struct.fc_els_cmd_s*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
